    - Init Mumsys_Request_Interface
    - Init Mumsys_Request_Abstract
    - Init Mumsys_Request_Default
    - Init Mumsys_Request_Console
    Mumsys_Session
    - Rename Mumsys_Session to Mumsys_Session_Default
    - Updates tests
    Mumsys_Time
    - Improves timer, updates tests
    Mumsys_FileSystem
    - Doesnt flollow symlinks now
    Mumsys_Multirename
    - Updates in coding style


2016-03-10
    Mumsys_Multirename
    - Improves handling of stored config files
        A config can contain selveral sub configs e.g: one config for this file 
        extension and one config for that file extension and so on.
        there is no config management at the moment. add some config or delete 
        the config file is currently supported. The thing at all: this config 
        will be called from now on (next version) the default "preset" and it 
        containts one of more configs.
    - Update/ improves tests
    - codecoverage 100%
    - VERSION 1.4.0


2016-03-27
    Mumsys_Multirename
    - Improves history handling
    - Sets logger property to be private
    - version 1.3.3
    - Update/ improves tests
    - codecoverage 100%
    - removes old code eg: _trackConfigDir()


2016-02-14
    Mumsys_GetOpts
    - Bugfix to work with php7+
    - Improves tests with versions checks


2016-01-31
    Mumsys_Registry
    - Init class and tests for LGPL
    - Improves tests
    - codecoverage 100%


2016-01-30
    Mumsys_Session
    - Add session handling
    - Adds tests
    - codecoverage 100%
    Mumsys_Timer
    - Updates tests
    - extending by Mumsys_Abstract
    - codecoverage 100%
    Mumsys_Logger
    - Improves logger tests
    - codecoverage 100%
    - Adds todo: change visibility of class properties
    Mumsys_Lock
    - Init class and tests for LGPL
    - Improves tests
    - codecoverage 100%
    Mumsys_Counter
    - Init class and tests for LGPL
    - Improves tests
    - codecoverage 100%
    Mumsys_Cache
    - Init class and tests for LGPL