@@ -15,6 +15,8 @@
     - Doesnt flollow symlinks now
     Mumsys_Multirename
     - Updates in coding style
+    Mumsys_PriorityQueue_Simple 
+    - Init class and tests
 
 
 2016-03-10
